[package]
name = "hello-world-playdate"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
euclid = { version = "0.22.11", default-features = false, features = ["libm"] }
crankstart = { git = "https://github.com/pd-rs/crankstart.git", rev = "2d2e99c" }
crankstart-sys = { git = "https://github.com/pd-rs/crankstart.git", rev = "2d2e99c" }
